# QtFrameworkTemplate

./: QtFrameworkTemplate.pro
dependency/json_r/win-x64-msvc/lib/: json_vs19_v142_libmd_a.lib  json_vs19_v142_libmdd_a.lib
dependency/json_r/win-x86-msvc/lib/: json_vs19_v142_libmd_a.lib  json_vs19_v142_libmdd_a.lib
dependency/ui_sdk/include/: IDownload.h  ILogServer.h  INetworkAccess.h  ISetting.h  SOFTWARE_LOGGER_CODE.h  SOFTWARE_OPERATE_CODE.h  SOFTWARE_SMP_CODE.h  WebSocketApi.h  auntec_aes_decoder.h  auntec_aes_encoder.h  auntec_base64_encryption.h  auntec_base_config.h  auntec_base_types.h  auntec_date_base.h  auntec_dir_util.h  auntec_encryption.h  auntec_file_util.h  auntec_lock_util.h  auntec_md5.h  auntec_process_base.h  auntec_string_util.h  auntec_sys_util.h  auntec_thread_base.h  auntec_url_decoder.h  auntec_url_encoder.h  auntec_win_tools.h  greta_intf.h
dependency/ui_sdk/osx-x64/: LogServer.dylib
dependency/ui_sdk/win-x64-msvc/lib/: GretaU.lib  LogServer.lib  Network.lib  Setting.lib
dependency/ui_sdk/win-x86-msvc/lib/: Commond.lib  GretaU.lib  LogServer.lib  Network.lib  Setting.lib
dependency/zlib_r/osx-x64/: libz.dylib
dependency/zlib_r/win-x64-msvc/lib/: zlib.lib  zlib_vs12_libmt_a.lib  zlib_vs12_libmtd_a.lib
dependency/zlib_r/win-x86-msvc/lib/: zlib.lib
src/: config.pri  install.pri  src.pro  symbols.pri  translations.pri
src/bfcommon/: APP_GLOBAL_CONSTANT.h  CMakeLists.txt  bfcommon.cpp  bfcommon.h  bfcommon.pro  bfcommon_export.h  common_util.cpp  common_util.h
src/bfcommon/macos/: EventTrackCInterface.h  EventTrackProvider.h  EventTrackProvider.mm  EventTracker.h  SOFTWARE_ERROR_CODE.h
src/bfcommon/send_thread/: CSendDataThread.cpp  CSendDataThread.h
src/bfcommon/thread/: thread_cond.c  thread_cond.h
src/bfcommon/update_thread/: CUpdateThread.cpp  CUpdateThread.h
src/bfcommon/zip/: ioapi.c  ioapi.h  ztool.c  ztool.h
src/bfskinmodule/: CMakeLists.txt  bfskinmodule.pri  bfskinmodule.pro  bfskinsetting.cpp  bfskinsetting.h
src/definitions/: basemoduletype.h  commandline.h  globalsetting.h  mainwindowsizes.h  plugininitorders.h  project.h  terminaldef.h  version.h
src/instance/: Billfish.entitlements  CAppSingle.cpp  CAppSingle.h  CMakeLists.txt  export_x64.bat  export_x86.bat  icon.icns  instance.pri  instance.pro  instance.rc  main.cpp  mainapplication.cpp  mainapplication.h  pluginmanager.cpp  pluginmanager.h  resource.h
src/instance/macosx/: Info.plist
src/interfaces/: iglobalsetting.h  interfaces.cpp  interfaces.pri  interfaces.pro  ipluginmanager.h
src/interfaces/MainWidget/: imainwidget.h
src/plugins/: CMakeLists.txt  plugins.pri  plugins.pro
src/plugins/MainWidget/: mainwidget.cpp  mainwidget.h  mainwidget.json  mainwidget.pri  mainwidget.pro  mainwidget.ui  mainwidgetplugin.cpp  mainwidgetplugin.h
src/utils/: BFCommandLineParser.cpp  BFCommandLineParser.h  CMakeLists.txt  CornerBubble.cpp  CornerBubble.h  ElidedLabel.cpp  ElidedLabel.h  FramelessHelper.cpp  FramelessHelper.h  NcFramelessHelper.cpp  NcFramelessHelper.h  NcFramelessHelper.mm  QtFlieOperation.cpp  QtFlieOperation.h  action.cpp  action.h  avatarlabel.cpp  avatarlabel.h  bfcheckfilestate.h  bfcrossplatformutils.cpp  bfcrossplatformutils.h  bfobserver.h  bfqtutils.cpp  bfqtutils.h  bfstructoperate.cpp  bfstructoperate.h  bftypeutils.cpp  bftypeutils.h  borderimage.cpp  borderimage.h  borderpixmap.cpp  borderpixmap.h  bubble.cpp  bubble.h  buttonwithmenu.h  chineseletterhelper.cpp  chineseletterhelper.h  circleavatarlabel.cpp  circleavatarlabel.h  clickablelabel.cpp  (+83 more)
src/utils/Platform/MacOs/: SystemUtils.h  SystemUtils.mm  SystemUtilsCInterface.h  os_define.cpp  os_define.h  string_utils.cpp  string_utils.h  sysutils.cpp  uisdk_utils.cpp
src/utils/bfBaseWindow/: BFComboBoxView.cpp  BFComboBoxView.h  BFCustomMenu.cpp  BFCustomMenu.h  BFFileAndFolderDialog.cpp  BFFileAndFolderDialog.h  BFFontSetting.cpp  BFFontSetting.h  BFHidenSideWidget.cpp  BFHidenSideWidget.h  BFImportEntranceWidget.cpp  BFImportEntranceWidget.h  BFMessageBox.cpp  BFMessageBox.h  BFMessageBox.ui  BFScrollBar.cpp  BFScrollBar.h  BFSkinManager.cpp  BFSkinManager.h  BFSliderActionWidget.cpp  BFSliderActionWidget.h  BfProgressDialog.cpp  BfProgressDialog.h  CHyperlinkLabel.cpp  CHyperlinkLabel.h  CIndexFloatingDialog.cpp  CIndexFloatingDialog.h  CIndexToCopyResultDialog.cpp  CIndexToCopyResultDialog.h  CLineEdited.cpp  CLineEdited.h  CListSearchLineEdit.cpp  CListSearchLineEdit.h  CListSearchLineEdit.ui  CNewWidget.cpp  CNewWidget.h  CNotificationFloatingWidget.cpp  CNotificationFloatingWidget.h  CPopupDialog.cpp  CPopupDialog.h  (+19 more)
src/utils/forms/: ui_BFMessageBox.h  ui_CListSearchLineEdit.h  ui_PngArrayPlayWid.h  ui_messagebox.h
