

add_subdirectory(datacenter)
add_subdirectory(basemodule)
add_subdirectory(mainwidget)
add_subdirectory(treemodule)
add_subdirectory(tagmanager)
add_subdirectory(bfsetting)
add_subdirectory(bfmediaplayer)
add_subdirectory(bfright)
add_subdirectory(bigimgpreview)
add_subdirectory(importtask)
add_subdirectory(netserver)
add_subdirectory(viewmanager)

